added endpoints for delete and post operation filter
